[package]
name = "x"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.7.0"
rand_chacha = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.10.1"
