[package]
name = "x"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.7.0"
rand_chacha = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
generic-array = { version = "0.14.5", features = ["serde", "more_lengths"] }
borsh = "0.9.1"
borsh-derive = "0.9.1"
bytemuck = { version = "1.8.0", features = ["derive"] }
curve25519-dalek = { version = "3.2.1", optional = true }
derivation-path = { version = "0.2.0", default-features = false }
digest = { version = "0.10.1", optional = true }
ed25519-dalek = { version = "=1.0.1" }
ed25519-dalek-bip32 = { version = "0.2.0" }
sha2 = "0.10.0"
bs58 = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.10.1"

[target."cfg(unix)".dependencies]
sysctl = "0.4.3"
